<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="applicationName">AnyCart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_login">Login</string>

    <!-- Item List Activity -->
    <string name="title_activity_item_list">Item List</string>
    <string name="imageview_item_image">Image here</string>
    <string name="textview_item_name">Name</string>
    <string name="textview_item_price">Price</string>
    <string name="textview_item_quantity">Qty</string>
    <string name="textview_item_size">Size</string>
    <string name="textview_item_color">Color</string>
    <string name="textview_item_brand">Brand</string>
    <string name="textview_item_category">Category</string>
    <string name="button_item_back">Back</string>
    <string name="button_item_next">Next</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_cart_detail">Cart Detail</string>
    <string name="textview_transaction_detail_quantity">Quantity</string>
    <string name="textview_transaction_detail_subtotal">Sub Total</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>