<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
	<ImageView
	    android:id="@+id/imageview_item_image"
	    android:layout_width="75dp"
	    android:layout_height="75dp"
	    android:layout_marginRight="15dp"
	    android:contentDescription="@string/imageview_item_image"
	    android:src="@drawable/image"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:showDividers="middle"
	    >
	   	<TextView
	    	android:id="@+id/textview_item_name"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textAppearance="?android:attr/textAppearanceLarge"
	    	android:text="@string/textview_item_name"
	    	/>
		<TextView
	    	android:id="@+id/textview_item_price"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textview_item_price"
	    	/>
		<TextView
	    	android:id="@+id/textview_item_quantity"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/textview_item_quantity"
	    	/>
	</LinearLayout>

</LinearLayout>