<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
	    android:id="@+id/imageview_item_image"
	    android:layout_width="150dp"
	    android:layout_height="150dp"
	    android:layout_gravity="center_horizontal"
	    android:contentDescription="@string/imageview_item_image"
	    android:src="@drawable/image"
	    />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_name"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textAppearance="?android:attr/textAppearanceLarge"
	    		android:text="@string/textview_item_name"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_name"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:textAppearance="?android:attr/textAppearanceLarge"
	    		android:text="@string/textview_item_name"
	    	/>
        </TableRow>
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_price"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/textview_item_price"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_price"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:text="@string/textview_item_price"
	    	/>
        </TableRow>
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_quantity"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/textview_item_quantity"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_quantity"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:text="@string/textview_item_quantity"
	    	/>
        </TableRow>
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_size"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/textview_item_color"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_size"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:text="@string/textview_item_color"
	    	/>
        </TableRow>
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_color"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/textview_item_size"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_color"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:text="@string/textview_item_size"
	    	/>
        </TableRow>
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_brand"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/textview_item_brand"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_brand"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:text="@string/textview_item_color"
	    	/>
        </TableRow>
        <TableRow>
            <TextView
	    		android:id="@+id/textview_item_category"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/textview_item_category"
	    	/>
        	<EditText
	    		android:id="@+id/edittext_item_category"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:singleLine="true"
	    		android:inputType="none"
	    		android:text="@string/textview_item_category"
	    	/>
        </TableRow>
    </TableLayout>
    <Button 
        android:id="@+id/button_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Add to Cart"
        />
	</LinearLayout>
</ScrollView>